--- a/config_files/ours/MASK_PCPA_jaad_2d.yaml
+++ b/config_files/ours/MASK_PCPA_jaad_2d.yaml
@@ -12,6 +12,7 @@ net_opts:
   backbone: vgg
 exp_opts:
   datasets: [jaad_beh, jaad_all]
+  # batch_size: [2, 2]
   batch_size: [2, 2]
   epochs: [40, 40]
   lr: [5.0e-07, 5.0e-07]
