--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,31 @@
 {
     "version": "0.2.0",
+    
     "configurations": [
+        {
+            "name": "train_depth_jaad",
+            "type": "debugpy",
+            "request": "launch",
+            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
+            "program": "${workspaceFolder}/train_test.py",
+            "args": [
+                "-c",
+                "config_files/my/my_jaad.yaml"
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "train_depth_watch_ped",
+            "type": "debugpy",
+            "request": "launch",
+            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
+            "program": "${workspaceFolder}/train_test.py",
+            "args": [
+                "-c",
+                "config_files/my/my_watch_ped.yaml"
+            ],
+            "console": "integratedTerminal"
+        },
         {
             "name": "train_test.py(jaad)",
             "type": "debugpy",
@@ -10,18 +35,6 @@
             "args": [
                 "-c",
                 "config_files/ours/MASK_PCPA_jaad_2d.yaml"
-            ],
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "train_test.py(watch_ped)",
-            "type": "debugpy",
-            "request": "launch",
-            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
-            "program": "${workspaceFolder}/train_test.py",
-            "args": [
-                "-c",
-                "config_files/my/my.yaml"
             ],
             "console": "integratedTerminal"
         },
