--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,7 @@
     "version": "0.2.0",
     
     "configurations": [
+        
         {
             "name": "train_depth_watch_ped",
             "type": "debugpy",
@@ -81,6 +82,15 @@
             "args": [
                 "/home/minshi/Pedestrian_Crossing_Intention_Prediction/data/models/jaad/MASK_PCPA_4_2D/25Apr2025-22h07m23s"
             ]
+        },
+        {
+            "name": "run_sequential_training",
+            "type": "debugpy",
+            "request": "launch",
+            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
+            "program": "${workspaceFolder}/run_sequential_training.py",
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
