--- a/config_files/my/my_jaad.yaml
+++ b/config_files/my/my_jaad.yaml
@@ -9,10 +9,15 @@ model_opts:
 net_opts:
   num_hidden_units: 256
   regularizer_val: 0.0001
-  dropout: 0.25
+  dropout: 0.1
+# exp_opts:
+#   datasets: [jaad_beh, jaad_all]
+#   batch_size: [1, 1]
+#   epochs: [60, 60]
+#   lr: [5.0e-05, 5.0e-05]
+
 exp_opts:
-  datasets: [jaad_beh, jaad_all]
-  batch_size: [16, 16]
-  # batch_size: [1, 1]
-  epochs: [100, 100]
-  lr: [5.0e-05, 5.0e-05]
+  datasets: [jaad_beh]
+  batch_size: [1]
+  epochs: [60]
+  lr: [5.0e-05]
