--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     
     "configurations": [
-        
+
         {
             "name": "train_depth_watch_ped",
             "type": "debugpy",
@@ -39,50 +39,50 @@
             ],
             "console": "integratedTerminal"
         },
-        {
-            "name": "train_test.py(jaad)",
-            "type": "debugpy",
-            "request": "launch",
-            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
-            "program": "${workspaceFolder}/train_test.py",
-            "args": [
-                "-c",
-                "config_files/ours/MASK_PCPA_jaad_2d.yaml"
-            ],
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "train_test.py(pie)",
-            "type": "debugpy",
-            "request": "launch",
-            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
-            "program": "${workspaceFolder}/train_test.py",
-            "args": [
-                "-c",
-                "config_files_pie/ours/MASK_PCPA_jaad_2d.yaml"
-            ],
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "test.py",
-            "type": "debugpy",
-            "request": "launch",
-            "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
-            "program": "${workspaceFolder}/test.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "variablePresentation": {
-                "function": "hide",
-                "special": "hide",
-                "class": "group",
-                "all": "group",
-                "protected": "hide",
-                "modules": "hide"
-            },
-            "args": [
-                "/home/minshi/Pedestrian_Crossing_Intention_Prediction/data/models/jaad/MASK_PCPA_4_2D/25Apr2025-22h07m23s"
-            ]
-        },
+        // {
+        //     "name": "train_test.py(jaad)",
+        //     "type": "debugpy",
+        //     "request": "launch",
+        //     "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
+        //     "program": "${workspaceFolder}/train_test.py",
+        //     "args": [
+        //         "-c",
+        //         "config_files/ours/MASK_PCPA_jaad_2d.yaml"
+        //     ],
+        //     "console": "integratedTerminal"
+        // },
+        // {
+        //     "name": "train_test.py(pie)",
+        //     "type": "debugpy",
+        //     "request": "launch",
+        //     "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
+        //     "program": "${workspaceFolder}/train_test.py",
+        //     "args": [
+        //         "-c",
+        //         "config_files_pie/ours/MASK_PCPA_jaad_2d.yaml"
+        //     ],
+        //     "console": "integratedTerminal"
+        // },
+        // {
+        //     "name": "test.py",
+        //     "type": "debugpy",
+        //     "request": "launch",
+        //     "python": "/home/minshi/miniconda3/envs/tf26/bin/python",
+        //     "program": "${workspaceFolder}/test.py",
+        //     "console": "integratedTerminal",
+        //     "justMyCode": true,
+        //     "variablePresentation": {
+        //         "function": "hide",
+        //         "special": "hide",
+        //         "class": "group",
+        //         "all": "group",
+        //         "protected": "hide",
+        //         "modules": "hide"
+        //     },
+        //     "args": [
+        //         "/home/minshi/Pedestrian_Crossing_Intention_Prediction/data/models/jaad/MASK_PCPA_4_2D/25Apr2025-22h07m23s"
+        //     ]
+        // },
         {
             "name": "run_sequential_training",
             "type": "debugpy",
