--- a/config_files/my/my_jaad.yaml
+++ b/config_files/my/my_jaad.yaml
@@ -10,14 +10,14 @@ net_opts:
   num_hidden_units: 256
   regularizer_val: 0.0001
   dropout: 0.1
-# exp_opts:
-#   datasets: [jaad_beh, jaad_all]
-#   batch_size: [1, 1]
-#   epochs: [60, 60]
-#   lr: [5.0e-05, 5.0e-05]
-
 exp_opts:
-  datasets: [jaad_beh]
-  batch_size: [1]
-  epochs: [60]
-  lr: [5.0e-05]
+  datasets: [jaad_beh, jaad_all]
+  batch_size: [1, 1]
+  epochs: [80, 80]
+  lr: [5.0e-06, 5.0e-06]
+
+# exp_opts:
+#   datasets: [jaad_all]
+#   batch_size: [1]
+#   epochs: [60]
+#   lr: [5.0e-05]
