update jaad all best model(jaad beh 0.6917 jaad all 0.8914 pie 0.9009)

--- a/config_files/my/my_jaad.yaml
+++ b/config_files/my/my_jaad.yaml
@@ -17,7 +17,7 @@ net_opts:
 #   lr: [5.0e-06, 5.0e-06]
 
 exp_opts:
-  datasets: [jaad_beh]
+  datasets: [jaad_all]
   batch_size: [1]
   epochs: [80]
   lr: [5.0e-05]
